Criada class=" ferrari"
A class foi criada para mudar a opacidade da imagem da Ferrari-PortoFino

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	      oferecemos veículos de luxo e qualidade imcomparavéis.
             </p>
           </div>
-          <img src="images/cars/Ferrari-Portofino.jpg" alt="Car" />
+          <img src="images/cars/Ferrari-Portofino.jpg" alt="Car" class="ferrari"/>
         </div>
       </div>
     </header>
