--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	      oferecemos veículos de luxo e qualidade imcomparavéis.
             </p>
           </div>
-          <img src="images/cars/Ferrari-Portofino.jpg" alt="Car" class="ferrari"/>
+          <img src="images/cars/Ferrari-Portofino.jpg" alt="Car"/>
         </div>
       </div>
     </header>
