--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
     <section class="features" id="features">
       <div class="content">
         <div class="title-wrapper-features">
-          <p>O que você pode fazer ?</p>
-          <h3>Características</h3>
+          <h3>O que lhe oferecemos !!!</h3>
         </div>
         <div class="feature-card-block">
           <div class="feature-card-item">
