--- a/index.html
+++ b/index.html
@@ -284,24 +284,16 @@
             <h3>Entregamos Tecnologia com Mobilidade.</h3>
             <p>
 		Sendo a <strong>CTD</strong> uma empresa de grande porte, temos a consciência que no atual  momento 
-		questões relacionadas a Tecnologia não pode caminhar sem Mobilidade.
-			
-		Mesmo que você se dedique muito ao trabalho e tente se manter sempre presente, 
-		pode ocorrer de precisar sair e não poder perder contato, alguma emergência ou evento.				
-			
+		questões relacionadas a Tecnologia não pode caminhar sem Mobilidade.			
+		Mesmo que você se dedique muito ao trabalho e tente se manter sempre presente, pode ocorrer de precisar 
+    sair e não poder perder contato, alguma emergência ou evento.				
 		Tudo isso é difícil de prever, mas, quem é realmente preparado para o mercado, 
 		sabe que deve se prevenir para atender sempre sua equipe e seus clientes bem.				
-				
 		Por isso, tenha sempre em mente o quão favorável para você pode ser uma Empresa voltada e preocupada
 		não somente com seu nível de desempenho em sua gama de serviços mais também privelegiando sempre questões
 		que envolvam Mobilidade para sua equipe, clientes e meio ambiente.
-
 		Não coloque restrições na hora de investir em um bom atendimento pois isso pode ser 
-		fundamental na hora de se destacar.
-				
-		Por isso desde o ano de 2020 temos imapactado o segmento de carros de luxo, não somente 
-		nacionalmente como mundialmente, atendemos a diversos países da América Latina e América 
-		Norte.				
+		fundamental na hora de se destacar.						
             </p>
           </div>
         </div>
@@ -311,8 +303,7 @@
     <section class="features" id="features">
       <div class="content">
         <div class="title-wrapper-features">
-          <p>O que você pode fazer ?</p>
-          <h3>Características</h3>
+          <h3>O que lhe oferecemos !!!</h3>
         </div>
         <div class="feature-card-block">
           <div class="feature-card-item">
