--- a/index.html
+++ b/index.html
@@ -292,12 +292,7 @@
 		Por isso, tenha sempre em mente o quão favorável para você pode ser uma Empresa voltada e preocupada
 		não somente com seu nível de desempenho em sua gama de serviços mais também privelegiando sempre questões
 		que envolvam Mobilidade para sua equipe, clientes e meio ambiente.
-		Não coloque restrições na hora de investir em um bom atendimento pois isso pode ser 
-<<<<<<< HEAD
-		fundamental na hora de se destacar.						
-=======
-		fundamental na hora de se destacar.					
->>>>>>> d14901e6af336379f5795486a03a612a874a0b97
+		Não coloque restrições na hora de investir em um bom atendimento pois isso pode ser fundamental na hora de se destacar.						
             </p>
           </div>
         </div>
